--- a/deploy/catalog_resources/redhat/activemq-artemis-operator.v0.6.2.clusterserviceversion.yaml
+++ b/deploy/catalog_resources/redhat/activemq-artemis-operator.v0.6.2.clusterserviceversion.yaml
@@ -1,7 +1,7 @@
 apiVersion: operators.coreos.com/v1alpha1
 kind: ClusterServiceVersion
 metadata:
-  name: activemq-artemis-operator.v0.6.1
+  name: activemq-artemis-operator.v0.6.2
   namespace: placeholder
   annotations:
     categories: "Messaging"
@@ -24,7 +24,7 @@ metadata:
             },
             "spec": {
                 "size": 1,
-                "image": "registry.redhat.io/amq-broker-7/amq-broker-73-openshift:7.3",
+                "image": "registry.redhat.io/amq7/amq-broker:7.4",
                 "commonConfig": {
                     "userName": "admin",
                     "password": "admin"
@@ -70,8 +70,9 @@ spec:
   keywords:
     - activemqartemis
     - operator
-  version: 0.6.1
+  version: 0.6.2
   maturity: alpha
+  replaces: activemq-artemis-operator.v0.6.1
   maintainers:
     - name: Red Hat, Inc.
       email: rkieley@redhat.com
@@ -87,12 +88,12 @@ spec:
       mediatype: image/png
   labels:
     alm-owner-amq-broker: activemq-artemis-operator
-    operated-by: activemq-artemis-operator.v0.6.1
+    operated-by: activemq-artemis-operator.v0.6.2
   selector:
     matchLabels:
       ActiveMQArtemis: example-activemqartemis
       application: example-activemqartemis-app
-      operated-by: activemq-artemis-operator.v0.6.1
+      operated-by: activemq-artemis-operator.v0.6.2
   installModes:
     - type: OwnNamespace
       supported: true
