--- a/deploy/examples/artemis-aio-journal.yaml
+++ b/deploy/examples/artemis-aio-journal.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   # Add fields here
   size: 2
-  image: registry.redhat.io/amq-broker-7/amq-broker-73-openshift:7.3
+  image: registry.redhat.io/amq7/amq-broker:7.4
   persistent: true
   aio: true
   commonConfig:
