--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -16,8 +16,7 @@ spec:
       containers:
         - name: activemq-artemis-operator
           # Replace this with the built image name
-          #image: registry.redhat.io/amq7-tech-preview/amq-broker-operator:0.6.3
-          image: docker-registry.default.svc:5000/entmqbr-2687-0/activemq-artemis-operator:latest-debug
+          image: quay.io/artemiscloud/activemq-artemis-operator:latest
           command:
             - /home/activemq-artemis-operator/bin/entrypoint
           args:
