--- a/deploy/catalog_resources/redhat/activemq-artemis-operator.v0.7.0.clusterserviceversion.yaml
+++ b/deploy/catalog_resources/redhat/activemq-artemis-operator.v0.7.0.clusterserviceversion.yaml
@@ -1,7 +1,7 @@
 apiVersion: operators.coreos.com/v1alpha1
 kind: ClusterServiceVersion
 metadata:
-  name: activemq-artemis-operator.v0.6.3
+  name: activemq-artemis-operator.v0.7.0
   namespace: placeholder
   annotations:
     categories: "Messaging"
@@ -13,7 +13,7 @@ metadata:
     tectonic-visibility: ocs
     alm-examples: >-
         [{
-            "apiVersion": "broker.amq.io/v1alpha1",
+            "apiVersion": "broker.amq.io/v2alpha1",
             "kind": "ActiveMQArtemis",
             "metadata": {
                 "name": "example-activemqartemis",
@@ -23,16 +23,14 @@ metadata:
                 }
             },
             "spec": {
-                "size": 1,
-                "image": "registry.redhat.io/amq7/amq-broker:7.4",
-                "commonConfig": {
-                    "userName": "admin",
-                    "password": "admin"
+                "deploymentPlan": {
+                    "size": 1,
+                    "image": "registry.redhat.io/amq7/amq-broker:7.4"
                 }
             }
         },
         {
-            "apiVersion": "broker.amq.io/v1alpha1",
+            "apiVersion": "broker.amq.io/v2alpha1",
             "kind": "ActiveMQArtemisAddress",
             "metadata": {
                 "name": "example-activemqartemisaddress",
@@ -42,37 +40,22 @@ metadata:
                 }
             },
             "spec": {
-                "statefulsetName": "example-activemqartemis-ss",
                 "addressName": "myAddress0",
                 "queueName": "myQueue0",
                 "routingType": "anycast"
-            }
-        },
-        {
-            "apiVersion": "broker.amq.io/v1alpha1",
-            "kind": "ActiveMQArtemisScaledown",
-            "metadata": {
-                "name": "example-activemqartemisscaledown",
-                "labels": {
-                    "ActiveMQArtemis": "example-activemqartemis",
-                    "application": "example-activemqartemis-app"
-                }
-            },
-            "spec": {
-                "localOnly": true
             }
         }]
   labels:
     operator-activemqartemis: "true"
 spec:
   displayName: ActiveMQ Artemis
-  description: ActiveMQ Artemis Operator can deploy headless service environments which exposed each of the ports, along with the statefulset.
+  description: ActiveMQ Artemis Operator deploys the ActiveMQ Artemis broker or brokers on OpenShift via a statefulset.
   keywords:
     - activemqartemis
     - operator
-  version: 0.6.3
+  version: 0.7.0
   maturity: alpha
-  replaces: activemq-artemis-operator.v0.6.2
+  replaces: activemq-artemis-operator.v0.6.3
   maintainers:
     - name: Red Hat, Inc.
       email: rkieley@redhat.com
@@ -88,12 +71,12 @@ spec:
       mediatype: image/png
   labels:
     alm-owner-amq-broker: activemq-artemis-operator
-    operated-by: activemq-artemis-operator.v0.6.3
+    operated-by: activemq-artemis-operator.v0.7.0
   selector:
     matchLabels:
       ActiveMQArtemis: example-activemqartemis
       application: example-activemqartemis-app
-      operated-by: activemq-artemis-operator.v0.6.3
+      operated-by: activemq-artemis-operator.v0.7.0
   installModes:
     - type: OwnNamespace
       supported: true
@@ -106,7 +89,14 @@ spec:
   customresourcedefinitions:
     owned:
       - name: activemqartemises.broker.amq.io
-        version: v1alpha1
+        version: v2alpha1
+        versions:
+          - name: v2alpha1
+            served: true
+            storage: true
+          - name: v1alpha1
+            served: false
+            storage: false
         kind: ActiveMQArtemis
         description: An instance of Active MQ Artemis
         displayName: ActiveMQ Artemis
@@ -116,21 +106,21 @@ spec:
           - kind: Deployment
             version: v1
         specDescriptors:
-          - description: The desired number of member pods for ActiveMQArtemis mesh
+          - description: The settings required for the broker to be deployed
+            displayName: DeploymentPlan
+            path: deploymentPlan
+          - description: The desired number of broker pods
             displayName: Size
             path: size
           - description: The Image
             displayName: Image
             path: image
       - name: activemqartemisaddresses.broker.amq.io
-        version: v1alpha1
+        version: v2alpha1
         kind: ActiveMQArtemisAddress
-        description: Adding and removing queues via custom resource definitions
+        description: Adding and removing addresses via custom resource definitions
         displayName: ActiveMQ Artemis Address
         specDescriptors:
-          - description: The Statefulset Name
-            displayName: Statefulset Name
-            path: statefulsetName
           - description: The Queue Name
             displayName: Queue Name
             path: queueName
@@ -141,7 +131,7 @@ spec:
             displayName: Routing Type
             path: routingType
       - name: activemqartemisscaledowns.broker.amq.io
-        version: v1alpha1
+        version: v2alpha1
         kind: ActiveMQArtemisScaledown
         description: Provides message migration on clustered broker scaledown
         displayName: ActiveMQ Artemis Scaledown
