--- a/deploy/crds/broker_v2alpha1_activemqartemis_crd.yaml
+++ b/deploy/crds/broker_v2alpha1_activemqartemis_crd.yaml
@@ -121,6 +121,22 @@ spec:
                 sslSecret:
                   type: string
                   description: Name of the secret to use for ssl information
+          console:
+            type: object
+            description: Configuration for the embedded web console
+            properties:
+              expose:
+                type: boolean
+                description: Whether or not to expose this port
+              sslEnabled:
+                type: boolean
+                description: Whether or not to enable SSL on this port
+              sslSecret:
+                type: string
+                description: Name of the secret to use for ssl information
+              useClientAuth:
+                type: boolean
+                description: If the embedded server requires client authentication
         status:
           type: object
   version: v2alpha1
